--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:8080",
   "devDependencies": {
     "@types/styled-components": "^5.1.36"
   }
